--- a/src/scss/_mixin.scss
+++ b/src/scss/_mixin.scss
@@ -12,13 +12,23 @@
 	max-width: $width;
 	margin-left: auto;
 	margin-right: auto;
+	padding-right: 24px;
+	padding-left: 24px;
 	@include breakpoint($baseWidth) {
-		max-width: $baseWidthSp;
+		// max-width: $baseWidthSp;
+		padding-right: 16px;
+		padding-left: 16px;
 	}
 }
 
 @mixin breakpoint($width: $bpSp) {
 	@media screen and (max-width: $width) {
+		@content;
+	}
+}
+
+@mixin bpPcs {
+	@media screen and (max-width: $baseWidth) {
 		@content;
 	}
 }
